cambios para el proyecto final numero dos

--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -14,7 +14,7 @@
                 <!-- HEADER DE LA PAGINA-->
         <header class="header">
             <div class="logo">
-                <a href="index.html"><img src="../img/into-the-wild-507c3bf42ccdd.png" alt="logo"></a>
+                <a href="../index.html"><img src="../img/into-the-wild-507c3bf42ccdd.png" alt="logo"></a>
             </div>  
             <nav class="menu">
                 <a href="../index.html">Inicio</a>
@@ -32,13 +32,13 @@
         <article class="articulo destacado">
             <div class="contenedor-texto">
                 <div>
-                    <h2 class="titulo"><a href="#">La vida en la frotera</a></h2>
+                    <h2 class="titulo"><a href="https://www.youtube.com/watch?v=rl9Gnw84FWA">La vida en la frontera</a></h2>
                  </div>
                     <p class="extracto">Quizá el espacio sea la frontera final, pero para quienes no dispongan de un cohete espacial, Alaska puede ofrecer una  alternativa bastante atractiva. Con poca cobertura telefónica y comodidades urbanas escasas, esta es una región para ‘hacer’ más que pasar el rato en cafeterías. Es recomendable contactar con un guía experimentado que conduzca al viajero a un glaciar lleno de grietas, o contratar a una agencia de viajes a zonas remotas para hacer un descenso por un río casi virgen. Sea en solitario con espray para los osos o poniéndose en manos de un experto sourdough (veterano de Alaska), el premio es incalculable.</p>
-                    <a href="#" class="btn-link">Leer más</a>
+                    <a href="https://www.youtube.com/watch?v=rl9Gnw84FWA&t=444" class="btn-link">Leer más</a>
                 </div>
             <div class="contenedor-thumbnail">
-                    <a href="#"><img src="../img/snow.jpg" alt="snow" /></a>
+                    <img src="../img/snow.jpg" alt="snow" />
             </div>
         </article>
 
