--- a/html/contacto.html
+++ b/html/contacto.html
@@ -147,7 +147,7 @@
                     <h2 style="text-align: center">Ubicación</h2>
                     <iframe
                         class="map"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d837.0175261647843!2d-60.64388237076263!3d-32.94915847341466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab16d6a669c3%3A0xc02428cf13d7b986!2sCorrientes%201086%2C%20S2000CTW%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1628979169544!5m2!1ses!2sar"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.0164582486464!2d-57.54613248467575!3d-38.00007657971902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dc1adb631811%3A0x50a125270e64c753!2sAv.%20Pedro%20Luro%202368%2C%20B7600GTQ%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1655777346849!5m2!1ses!2sar" 
                         allowfullscreen=""
                         loading="lazy"
                     ></iframe>
